src/index.sass
@import './vendor/normalize'
@import './vendor/fonts/fonts'

html
  scroll-behavior: smooth
  font-family: 'Golos', Arial, Helvetica, sans-serif
  font-weight: 400
  

// ========= variables =============

$tablet-width: 1279.98px
$mobile-width: 767.98px
$first-col: #FFF
$second-col: #F4D8CD
$desktop-padding: 200px 100px
$tablet-padding: 50px
$mobile-padding: 25px

//  ============= common styles ===========

.button
  padding: 10px 20px
  color: $first-col
  background-color: transparent
  position: relative
  border: none
  border-radius: 7px
  transition: opacity .24s ease-in-out
  @media screen and (max-width: $mobile-width)
    width: 100%
  &_bg_green
    background-color: #1E555C
  &_bg_black
    background-color: #3A2E39
  &_bg_white
    background-color: $second-col
  &_col_black
    color: black
  &:hover
    opacity: .65
    cursor: pointer
  &__link
    position: absolute
    top: 0
    bottom: 0
    right: 0
    left: 0

// burger

.burger-menu
  position: fixed
  display: flex
  flex-direction: column
  gap: 30px
  align-items: center
  justify-content: center
  top: 0
  width: 100%
  height: 100%
  bottom: 0
  transform: translateX(100%)
  z-index: 10
  background-color: #1E555C
  transition: transform .24s ease-out
  &_active
    transform: translateX(0)
  &__link
    color: $second-col
    text-decoration: none
    font-size: 35px
    font-weight: 700
    text-transform: uppercase
    transition: opacity .24s linear
    @media screen and (max-width: $mobile-width)
      font-size: 25px
    &:hover
      opacity: .65
      cursor: pointer


.burger-buttons
  position: fixed
  top: 50px
  right: 50px
  width: 50px
  height: 50px
  transition: opacity .24s linear
  z-index: 100
  @media screen and (max-width: $mobile-width)
    width: 30px
    height: 30px
    right: 30px
  @media screen and (max-width: 475px)
    top: 50px
  &_active
    padding-top: 12px
  &:hover
    cursor: pointer
    opacity: .6

.burger-buttons .burger-line
  transition: transform .3s linear
.burger-buttons_active .burger-line
  transition: transform .3s linear
.burger-buttons_active .burger-line:first-of-type
  transform: rotate(45deg)
  margin-bottom: -4px
.burger-buttons_active .burger-line:last-of-type
  transform: rotate(-45deg)
  margin-bottom: 0
.burger-buttons_active .burger-line:nth-of-type(2)
  display: none

.burger-line
  height: 5px
  width: 100%
  background-color: #3A2E39
  &:not(:last-of-type)
    margin-bottom: 15px
    @media screen and (max-width: $mobile-width)
      margin-bottom: 5px

// preloader

.loader,
.loader:before,
.loader:after 
  background: $second-col
  -webkit-animation: load1 1s infinite ease-in-out
  animation: load1 1s infinite ease-in-out
  width: 1em
  height: 4em

.loader 
  color: $second-col
  display: none
  text-indent: -9999em
  margin: 88px auto
  position: absolute
  top: 0
  right: 0
  left: 0
  bottom: 0
  font-size: 11px
  -webkit-transform: translateZ(0)
  -ms-transform: translateZ(0)
  transform: translateZ(0)
  -webkit-animation-delay: -0.16s
  animation-delay: -0.16s
  &_active
    display: block

.loader:before,
.loader:after 
  position: absolute
  top: 0
  content: ''

.loader:before 
  left: -1.5em
  -webkit-animation-delay: -0.32s
  animation-delay: -0.32s

.loader:after 
  left: 1.5em

@-webkit-keyframes load1 
  0%,
  80%,
  100% 
    box-shadow: 0 0
    height: 4em
  40% 
    box-shadow: 0 -2em
    height: 5em
  
@keyframes load1 
  0%,
  80%,
  100% 
    box-shadow: 0 0
    height: 4em
  40% 
    box-shadow: 0 -2em
    height: 5em
  



// ========= HOME ===================
.home
  background-color: $second-col
  padding: $desktop-padding
  box-sizing: border-box
  @media screen and (max-width: $tablet-width)
    padding: $tablet-padding
  @media screen and (max-width: $mobile-width)
    padding: $mobile-padding
  &__logo
    display: block
    width: 100px
    aspect-ratio: 1 / 1
    margin: 0 auto 60px auto
    transition: opacity .24s linear
    &:hover
      opacity: .6
      cursor: pointer
    @media screen and (max-width: $tablet-width)
      margin-bottom: 50px
    @media screen and (max-width: $mobile-width)
      margin: 0 0 40px 0
  &__title
    font-family: 'WixMadeforDisplay', Arial, Helvetica, sans-serif
    font-size: 80px
    line-height: 1.1
    color: #3A2E39
    text-align: center
    margin: 0 0 60px 0
    @media screen and (max-width: $tablet-width)
      margin-bottom: 50px
      font-size: 64px
    @media screen and (max-width: $mobile-width)
      margin: 0 0 40px 0
      font-size: 32px
      text-align: left
  &__buttons-container
    display: flex
    align-items: center
    justify-content: center
    gap: 15px
    @media screen and (max-width: $mobile-width)
      align-items: flex-start
      flex-direction: column

// ============ POSTS ==============

.posts
  background-color: #1E555C
  padding: $desktop-padding
  overflow-x: hidden
  @media screen and (max-width: $tablet-width)
    padding: $tablet-padding
  @media screen and (max-width: $mobile-width)
    padding: $mobile-padding
  &__container
    display: flex
    justify-content: center
    max-width: 1280px
    margin: 0 auto
    position: relative
  &__error
    display: none
    width: 100%
    text-align: center
    color: red
    &_active
      display: block

.post
  display: flex
  flex-direction: column
  align-items: flex-start
  justify-content: center
  gap: 30px
  &__button
    background-color: #3A2E39
  &__img
    object-fit: cover
    object-position: center
    border-radius: 40px
    width: 100%
    aspect-ratio: 1 / 1
    @media screen and (max-width: $mobile-width)
      width: 60%
      margin: 0 auto
  &__info
    display: flex
    flex-direction: column
    gap: 10px
    align-items: flex-start
    @media screen and (max-width: $mobile-width)
      width: 100%
  &__index
    color: $second-col
    font-size: 20px
    letter-spacing: -0.025em
    margin: 0
    line-height: 1.5
    @media screen and (max-width: $mobile-width)
      text-align: center
      width: 100%
  &__text
    color: $first-col
    line-height: 1.4
    font-size: 20px
    margin: 0
    @media screen and (max-width: $mobile-width)
      text-align: center
      width: 100%

.swiper-button-prev
  position: absolute
  top: 50%
  transform: translateY(-50%)
  left: 0
  z-index: 10
  @media screen and (max-width: 1000px)
    top: 40%
  @media screen and (max-width: 375px)
    top: 30%

.swiper-button-next
  position: absolute
  top: 50%
  transform: translateY(-50%)
  right: 0
  z-index: 10
  @media screen and (max-width: 1000px)
    top: 40%
  @media screen and (max-width: 375px)
    top: 30%

.arrow-slider
  opacity: .44

.arrow-slider svg 
    width: 100px
    height: auto
    cursor: pointer
    overflow: visible
    @media screen and (max-width: $tablet-width)
      width: 70px
    @media screen and (max-width: 1000px)
      width: 50px
    @media screen and (max-width: 375px)
      width: 40px

.arrow-slider svg polygon,
.arrow-slider svg path 
    transition: all 0.5s cubic-bezier(0.2, 1, 0.3, 1)
    fill: $second-col

.arrow-slider svg:hover polygon,
.arrow-slider svg:hover path 
    transition: all 1s cubic-bezier(0.2, 1, 0.3, 1)
    fill: #000

.arrow-slider svg:hover .arrow-slider-pl 
    animation: arrow-slider-anim 1s cubic-bezier(0.2, 1, 0.3, 1) infinite

.arrow-slider svg:hover .arrow-slider-pl-fixed 
    animation: arrow-slider-fixed-anim 1s cubic-bezier(0.2, 1, 0.3, 1) infinite

  
@keyframes arrow-slider-anim 
    0% 
        opacity: 1
        transform: translateX(0) 
    5% 
        transform: translateX(-0.1rem)
    100% 
        transform: translateX(1rem)
        opacity: 0
    

@keyframes arrow-slider-fixed-anim 
    5% 
        opacity: 0
    20% 
        opacity: 0.4
    100% 
        opacity: 1

// ============== PostPage

.post-page
  max-width: 1280px
  margin: 0 auto
  &__comments-heading
    color: $second-col
    font-size: 30px
    font-weight: 600
  &__comments

  &__comment
    display: flex
    gap: 30px
    justify-content: flex-start
    background-color: $second-col
    border-radius: 20px
    padding: 10px 15px
    &:not(:last-of-type)
      margin-bottom: 35px
    @media screen and (max-width: 540px)
      flex-direction: column
      
  &__comment-info
    color: #3A2E39
    display: flex
    flex-direction: column
    justify-content: space-evenly
    gap: 10px
  &__avatar
    border-radius: 50%
    width: 64px
    height: 64px
    flex-shrink: 0
  &__comment-mail
    margin: 0
    font-weight: 800
    word-break: break-word
  &__comment-text
    margin: 0

.post-page .loader
  position: initial

.post-card
  background-color: $second-col
  border-radius: 20px
  padding: 50px
  display: flex
  justify-content: space-between
  gap: 50px
  margin-bottom: 30px
  @media screen and (max-width: $tablet-width)
    flex-direction: column
  @media screen and (max-width: $mobile-width)
    padding: 20px
  &__img
    border-radius: 20px
    height: fit-content
    object-fit: cover
    object-position: center
    @media screen and (max-width: $tablet-width)
      aspect-ratio: 1 / 1
      width: 60%
    @media screen and (max-width: 800px)
      width: 100%
  &__info-wrapper
    color: #3A2E39
    display: flex
    flex-direction: column
    gap: 80px
    @media screen and (max-width: $mobile-width)
      gap: 40px
  &__heading
    font-size: 45px
    font-weight: 800
    margin: 0
    word-break: break-word
    @media screen and (max-width: $tablet-width)
      font-size: 30px
    @media screen and (max-width: $mobile-width)
      font-size: 25px
  &__subheading
    font-size: 35px
    margin: 0
    word-break: break-word
    @media screen and (max-width: $tablet-width)
      font-size: 25px
    @media screen and (max-width: $mobile-width)
      font-size: 20px


// ================ FORM ===============

.add-form 
  display: flex
  flex-direction: column
  width: 70%
  margin: 0 auto
  &__error
    margin: 15px 0
    color: red
    margin: 0 0 10px 0
  &__button
    background-color: $second-col
    color: #1E555C
    text-transform: uppercase
  &__input
    border: none
    padding: 0
    border-bottom: 1px solid $second-col
    color: $first-col
    background-color: transparent
    margin-bottom: 20px
    font-size: 25px
    padding: 12px
    @media screen and (max-width: $mobile-width)
      font-size: 20px
    &:focus
      outline: none
    &_type_title

    &_type_text
      min-height: 200px
      border: 1px solid $second-col
      border-radius: 10px

// =========== SUBSCRIBE ============

.subscribe
  background-color: #1E555C
  padding: $desktop-padding
  padding-top: 0
  @media screen and (max-width: $tablet-width)
    padding: $tablet-padding
  @media screen and (max-width: $mobile-width)
    padding: $mobile-padding
  &__container
    max-width: 1280px
    margin: 0 auto
  &__text
    font-size: 48px
    color: $second-col
    font-family: 'WixMadeforDisplay', Arial, Helvetica, sans-serif
    max-width: 800px
    margin: 0 0 40px 0
    @media screen and (max-width: $tablet-width)
      font-size: 32px
    @media screen and (max-width: $mobile-width)
      font-size: 25px
  &__buttons
    display: flex
    gap: 15px
    @media screen and (max-width: $mobile-width)
      flex-direction: column

//  ============ FOOTER ======

.footer
  background-color: #1E555C
  padding: 50px
  &__container
    max-width: 1280px
    margin: 0 auto
    display: flex
    flex-direction: column
    align-items: center
    justify-content: center
    gap: 20px
  &__copyright
    color: white
    font-weight: 500
  &__images
    display: flex
    width: 160px
    height: 160px
    flex-wrap: wrap
  &__svg
    background:rgb(36, 102, 111)
    transform:rotate(0deg)
    display:block
    width: 80px
    height: 80px

